--- a/gb/21/7/16/n13094320.md
+++ b/gb/21/7/16/n13094320.md
@@ -1,26 +1,25 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kosnxt3721/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kosnxt3721/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kosnxt3721/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kosnxt3721/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kosnxt3721/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kosnxt3721/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kosnxt3721/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kosnxt3721/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kosnxt3721/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kosnxt3721/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kosnxt3721/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kosnxt3721/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kosnxt3721/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kosnxt3721/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kosnxt3721/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kosnxt3721/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kosnxt3721/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kosnxt3721/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kosnxt3721/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kosnxt3721/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kosnxt3721/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kosnxt3721/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kosnxt3721/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kosnxt3721/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kosnxt3721/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kosnxt3721/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kosnxt3721/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kosnxt3721/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kosnxt3721/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kosnxt3721/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kosnxt3721/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kosnxt3721/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kosnxt3721/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kosnxt3721/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kosnxt3721/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kosnxt3721/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kosnxt3721/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kosnxt3721/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kosnxt3721/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kosnxt3721/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kosnxt3721/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kosnxt3721/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kosnxt3721/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kosnxt3721/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kosnxt3721/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kosnxt3721/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kosnxt3721/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>【远见快评】拒高层接触 习近平因何反转？</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2021/07/id13094340-c967c30a67bcfada896c91d23beece7d-600x400.jpg" />
-<h6>拒高层接触，习近平因何反转？（《远见快评》提供）
-</h6>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>【远见快评】拒与美高层接触 习近平因何反转？</h2>
+<a href="https://d12gl57lrewmhb.cloudfront.net/G8j9buJ6f"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<h6></h6>
 <hr>
-	<p>【大纪元2021年07月17日讯】朋友们好，今天是7月16日（星期五），欢迎来到《<ahref="https://github.com/kosnxt3721/djy/blob/master/gb/tag/%E8%BF%9C%E8%A7%81%E5%BF%AB%E8%AF%84.md#1">远见快评</a>》，我是唐靖远。</p>
+	<p>【大纪元2021年07月17日讯】朋友们好，今天是7月16日（星期五），欢迎来到《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%BF%9C%E8%A7%81%E5%BF%AB%E8%AF%84.md#1">远见快评</a>》，我是唐靖远。</p>
 <p>最近这几天，中美双方在内外政策方面的动作都不少，相对来讲，美国还要更多一些。尤其在对外政策上，美国已经明显呈现主动进攻的状态，而中共在开始防御收缩，滴滴被查事件就是一个典型例证。</p>
 <p>在这种环境下，我们看到中美之间开始出现了一种奇怪的现象，就是美方频频释放愿意与中共高层恢复接触以及对话，但中共高层却一反常态，频频回避甚至是拒绝。</p>
 <p>这是非常耐人寻味的对吧，我们都知道，在拜登政府刚刚上台的时候，中共明显是急不可耐地想要尽快恢复与美方的高层接触。为了能够和布林肯见上一面，中共甚至不惜同意布林肯在阿拉斯加转机的时候主动上门求见，这在外交上已经是一种近乎羞辱性质的安排。</p>
 <p>但在最近，中共的态度明显发生了变化，其最具代表性的就是昨天刚刚被媒体披露的，美国国务院副国务卿谢尔曼最后一刻取消访华的消息。这个消息并不是孤立的，与其相关的很多现象都显示出，中美各自的战略定位正在发生变化。</p>
-<p>今天我们就来和大家深入讨论一下这种变化背后的政治逻辑，以及这种变化对很多个人、组织甚至是一些国家带来的影响，比如世卫组织的总干事<ahref="https://github.com/kosnxt3721/djy/blob/master/gb/tag/%E8%B0%AD%E5%BE%B7%E5%A1%9E.md#1">谭德塞</a>谭书记。</p>
-<p>&#8212;&#8212;&#8212;&#8212;&#8212;&#8212;&#8212;-</p>
+<p>今天我们就来和大家深入讨论一下这种变化背后的政治逻辑，以及这种变化对很多个人、组织甚至是一些国家带来的影响，比如世卫组织的总干事<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%B0%AD%E5%BE%B7%E5%A1%9E.md#1">谭德塞</a>谭书记。</p>
+<p><center><a src=""></a><a href="https://d12gl57lrewmhb.cloudfront.net/G8j9buJ6f"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/embed/06f49ef3-f9ae-4ae4-ad85-a4d5d7f8553b?r=16x9&amp;d=1357" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center></p>
 <h2>【最后时刻生变 美高官访华内幕曝光】</h2>
 <p>美国国务院昨天（15日）正式宣布，美国常务副国务卿温迪?谢尔曼（Wendy Sherman）下周将访问日本、韩国和蒙古。华盛顿的外交政策圈之前曾普遍预计，谢尔曼将访问中国。但国务院宣布的行程却没有提到中国。</p>
 <p>关于谢尔曼这次出访的目的，国务院在声明中说得很清楚：谢尔曼副国务卿在访问期间将“重申美国致力于与盟友和伙伴合作，以推动印太和平、安全与繁荣，并维护基于规则的国际秩序”。</p>
 <p>朋友们一听到“维护基于规则的国际秩序”这个固定表述的用语就会知道，这句话的意思就是维护美国主导的，已经行之有效了数十年的国际秩序。这当然是一次令中共非常不爽的访问。</p>
 <p>然后英国《金融时报》迅速发布独家报导，援引了4位知情者的消息说，谢尔曼访华泡汤的主要原因是，中共拒绝安排谢尔曼与外交部分管日常工作的副部长乐玉成见面，只同意让她与负责美大地区事务的副部长谢峰见面，而谢峰在外交部副部长中仅排名第五。这显然是带有贬低性质的安排，于是美方取消了谢尔曼天津之行的计划。</p>
 <p>这个说法从中方那边得到了一个侧面的证实。马云控股的《南华早报》在今天早上8点过发布了一份最新的独家报导，说谢尔曼的天津之行仍然有希望实现，中美双方正在就一些重要的细节进行讨论，只有所有细节都敲定之后，双方才会正式公布。</p>
-<p>报导引述消息人士的说法称，中方的确是计划让负责美国事务的外交部副部长谢锋会见谢尔曼，但美方希望确保谢尔曼能直接接触高层决策者。中方稍后作了一定让步，同意外交部长王毅可以会见谢尔曼，但美方仍然希望谢尔曼能够接触<ahref="https://github.com/kosnxt3721/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>的核心圈子。</p>
-<p>为什么美方对与王毅会面不感兴趣？说穿了很简单：王毅级别不够。早在上个月，白宫亚洲事务高级官员坎贝尔（Kurt Campbell）就表示，美国没能与中共真正的决策者进行会晤。他说，杨洁篪和王毅这两大外交政策官员实际上都不在<ahref="https://github.com/kosnxt3721/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>的核心圈附近，因此可以想像美国会如何看待谢锋这样的角色。</p>
+<p>报导引述消息人士的说法称，中方的确是计划让负责美国事务的外交部副部长谢锋会见谢尔曼，但美方希望确保谢尔曼能直接接触高层决策者。中方稍后作了一定让步，同意外交部长王毅可以会见谢尔曼，但美方仍然希望谢尔曼能够接触<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>的核心圈子。</p>
+<p>为什么美方对与王毅会面不感兴趣？说穿了很简单：王毅级别不够。早在上个月，白宫亚洲事务高级官员坎贝尔（Kurt Campbell）就表示，美国没能与中共真正的决策者进行会晤。他说，杨洁篪和王毅这两大外交政策官员实际上都不在<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>的核心圈附近，因此可以想像美国会如何看待谢锋这样的角色。</p>
 <p>实际上，这次谢尔曼之行并不是美国接触不上中共真正握有决策权的高层人员唯一例子。</p>
 <h2>【连拒高层会谈 习近平为何反转】</h2>
 <p>早在5月份，《金融时报》就曾经发表报导披露，美国国防部长奥斯汀（Lloyd Austin）曾三度提出要求与中共中央军事委员会副主席许其亮对话，但都被中共拒绝。此外，美军参谋长联席会议主席马克?米利（Mark Milley）将军被指也未能与中共对等层级的官员进行过对话。</p>
@@ -59,7 +58,7 @@
 <p>所以，美国现在主动要求建立美中高层接触，更多的是一种带有强制色彩的“令”，而不是你好我好的协商。而这种“令”的实质内容，就是美国也是不断重复的固定表述：遵守基于规则的国际秩序。一句话，要求中共必须遵守规则，不遵守，就制裁到足够疼，直到遵守了规则为止。</p>
 <p>这当然是拥有战无不胜的习思想的习一尊绝对无法接受的对吧，所以习近平频频拒绝各种热线，摆明了就是以此表态：我不吃你这套规则，也不会遵守你的要求。他拒绝的不是高层接触，而是拒绝现行的规则。</p>
 <p>所以，未来的习近平，一定会用更多不对称战法的方式，来刻意展示自己拥有的“强大能力”，从而必然树敌更多，引发更多的围剿。这已经是一条无法回头的路，他只能加速到底。</p>
-<h2>【<ahref="https://github.com/kosnxt3721/djy/blob/master/gb/tag/%E8%B0%AD%E5%BE%B7%E5%A1%9E.md#1">谭德塞</a>变脸要求中共交数据】</h2>
+<h2>【<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%B0%AD%E5%BE%B7%E5%A1%9E.md#1">谭德塞</a>变脸要求中共交数据】</h2>
 <p>好的，最后还有一点时间，我们简单说说谭德塞谭书记。</p>
 <p>就在昨天，一度被中共视为亲密朋友的世卫组织总干事谭德塞拉下了脸，公开表示现在排除“实验室泄露说”还为时过早。他说自己是免疫学家，在实验室工作过，而“实验室发生意外是很普遍的”。他要求中共透明公开的合作，交出原始数据。</p>
 <p>然后他很有点以彼之道还施彼身地补充说：“我们欠数百万受难者和死者一个解释。”</p>
@@ -68,48 +67,48 @@
 <p>我们就看到，谭德塞其实是夹在中美对决大背景之下，无数大大小小处于中间地带的一份子。谁的优势更大，他们就会偏向谁。谭书记的表态固然有自保因素，但他那点提前站队、避免将来被动的小小心机，也是掩藏不住的。</p>
 <p>所以，谭书记的变脸，对病毒溯源有多大意义还真不好说，毕竟中共现在就是死猪不怕开水烫顶着不让调查。但这算得上谭德塞当前站队的一个表态，这对我们来说，他更多代表了一点观察指标的意义。</p>
 <p>好的，今天我们就聊到这里，谢谢各位的观看，我们下次再见。</p>
-<p>《<ahref="https://github.com/kosnxt3721/djy/blob/master/gb/tag/%E8%BF%9C%E8%A7%81%E5%BF%AB%E8%AF%84.md#1">远见快评</a>》制作组</p>
+<p>《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%BF%9C%E8%A7%81%E5%BF%AB%E8%AF%84.md#1">远见快评</a>》制作组</p>
 <p>责任编辑：李昊?#</p>
 	
 <hr>
-
+<hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/kosnxt3721/djy/blob/master/gb/21/7/5/n13069784.md#1">【远见快评】滴滴遭三连击 官媒为何抛攻台方案</a></li>
-<li><a href="https://github.com/kosnxt3721/djy/blob/master/gb/21/7/7/n13074809.md#1">【远见快评】习近平发亡党之音？日相一语惊人</a></li>
-<li><a href="https://github.com/kosnxt3721/djy/blob/master/gb/21/7/9/n13079403.md#1">【远见快评】中共为何火力全开 滴滴满门抄斩</a></li>
-<li><a href="https://github.com/kosnxt3721/djy/blob/master/gb/21/7/12/n13084696.md#1">【远见快评】孟晚舟搞砸翻盘无望 古巴突爆示威</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/7/5/n13069784.md#1">【远见快评】滴滴遭三连击 官媒为何抛攻台方案</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/7/7/n13074809.md#1">【远见快评】习近平发亡党之音？日相一语惊人</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/7/9/n13079403.md#1">【远见快评】中共为何火力全开 滴滴满门抄斩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/7/12/n13084696.md#1">【远见快评】孟晚舟搞砸翻盘无望 古巴突爆示威</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/kosnxt3721/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/20/n10498401.md#1" target="_blank">孙盛起：撒旦横行，圣婴只能死去</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/23/n10871477.md#1" target="_blank">感恩节 来自西方人的最美好心愿</a></li>
-<hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/22/n10162566.md#1" target="_blank">共产暴政录——杀父竟成学习榜样</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/29/n10261167.md#1" target="_blank">一位加拿大生物学家无止境的神奇之路</a></li><hr>
+
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/21/7/10/n13080166.md#1">海地总统遭暗杀 英国灵媒预言成真</a></li>
-<li><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/21/7/7/n13073679.md#1">【命理】雷神震怒 警惕不孝不义之人</a></li>
-<li><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/21/7/8/n13077302.md#1">【小宇宙传说】世界各地的圣像为何落泪？</a></li>
-<li><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/21/7/9/n13079287.md#1">【古韵流芳】高风亮节虞世南 大唐第一咏蝉诗</a></li>
-<li><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/21/7/11/n13082243.md#1">【珍言真语】李有甫：折磨蝎子 军官得心绞痛怪病</a></li>
-<li><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/21/7/13/n13086810.md#1">【直播】法轮功反迫害22周年 华府集会游行</a></li>
-<li><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/21/7/15/n13091782.md#1">【首播】专访盛慕真教授：毛的血腥群众运动</a></li>
-<li><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/21/7/15/n13092060.md#1">【秦鹏直播】美机再抵台 中共态度大变 嘴硬腿软</a></li>
-<li><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/21/7/14/n13087451.md#1">莫言被踢出“中国百年名作家”之列 视频热传</a></li>
-<li><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/21/7/14/n13087339.md#1">【新闻大家谈】陈光诚：抗共须跳出2怪圈</a></li>
-<li><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/21/7/14/n13088323.md#1">如何在没有空调的情况下保持凉爽</a></li>
-<li><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/21/7/13/n13086946.md#1">让妻女坐经济舱 郭富城被网民说太抠门</a></li>
-<li><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/21/7/14/n13089010.md#1">获悉《苹果》员工觅得好去处 杜汶泽大气回应</a></li>
-<li><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/21/7/14/n13089199.md#1">范冰冰独立开新公司 与旧爱李晨彻底割席</a></li>
-<li><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/21/7/14/n13089339.md#1">昆凌晒6岁女儿手写英文诗 拐弯抹角夸周杰伦</a></li>
-<li><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/21/7/15/n13091975.md#1">刘嘉玲梁朝伟同台走秀 两人反差状态超喜感</a></li>
-<li><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/21/7/15/n13089763.md#1">疫苗新副作用？打强生出现神经问题 1类人警惕</a></li>
-<li><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/21/7/15/n13089939.md#1">小金鱼野放美国湖泊 长成几十公分巨无霸</a></li>
-<li><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/21/7/15/n13090127.md#1">法男心灵感应与预知能力 震撼《美国达人秀》</a></li>
-<li><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/21/7/10/n13080633.md#1">养好胃口才能抗癌！营养师：癌症饮食3大要诀</a></li>
-<li><a href="https://github.com/vvzrfn3290/djy/blob/master/gb/21/7/14/n13088331.md#1">【直播】Delta变种比想像可怕 第五波疫情恐到来？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kosnxt3721/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kosnxt3721/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/7/16/n13094320.htm">【远见快评】拒高层接触 习近平因何反转？</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/7/16/n13094320.htm">【远见快评】拒与美高层接触 习近平因何反转？</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kosnxt3721/djy/blob/master/gb/21/7/16/n13094320.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kosnxt3721/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kosnxt3721/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kosnxt3721/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kosnxt3721/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kosnxt3721/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kosnxt3721/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kosnxt3721/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kosnxt3721/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kosnxt3721/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kosnxt3721/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kosnxt3721/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kosnxt3721/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kosnxt3721/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kosnxt3721/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kosnxt3721/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kosnxt3721/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kosnxt3721/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kosnxt3721/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kosnxt3721/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kosnxt3721/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kosnxt3721/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kosnxt3721/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kosnxt3721/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kosnxt3721/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kosnxt3721/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kosnxt3721/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kosnxt3721/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kosnxt3721/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kosnxt3721/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kosnxt3721/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kosnxt3721/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kosnxt3721/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kosnxt3721/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kosnxt3721/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kosnxt3721/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kosnxt3721/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kosnxt3721/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kosnxt3721/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kosnxt3721/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kosnxt3721/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kosnxt3721/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kosnxt3721/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kosnxt3721/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kosnxt3721/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kosnxt3721/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kosnxt3721/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kosnxt3721/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kosnxt3721/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/7/16/n13094320.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
